# Stellar

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Makefile  PRIVACY.md  QUEUE_AND_SCHEDULER_HELP.md  README.md  THIRD-PARTY-NOTICES.txt  changelog.md  release.ps1  release.sh  tips.txt  update.json  version.ps1
Scheduler-implementation-guide/: QUEUE IMPLEMENTATION GUIDE.txt
app/: stellar.rc  stellar.rc.in
app/qml/: AddExceptionDialog.qml  AddUrlDialog.qml  BatchDownloadDialog.qml  BatchDownloadListDialog.qml  BrowserIntegrationDialog.qml  ColumnsDialog.qml  CompactMenuItem.qml  DeleteConfirmDialog.qml  DeleteDoneConfirmDialog.qml  DlgButton.qml  DownloadCompleteDialog.qml  DownloadFileInfoDialog.qml  DownloadProgressDialog.qml  DownloadTable.qml  DuplicateDownloadDialog.qml  FilePropertiesDialog.qml  FindDialog.qml  GrabberDialog.qml  GrabberIncludeFiltersDialog.qml  GrabberProjectPickerDialog.qml  GrabberResultsDialog.qml  GrabberScheduleDialog.qml  GrabberSettingsDialog.qml  GrabberStatisticsDialog.qml  Main.qml  QueueSelectionDialog.qml  RssDownloadRulesDialog.qml  RssWindow.qml  SchedulerDialog.qml  SettingsDialog.qml  Sidebar.qml  StatisticsDialog.qml  StatusBar.qml  Toolbar.qml  ToolbarBtn.qml  ToolbarDropdown.qml  TorrentDuplicateDialog.qml  TorrentMetadataDialog.qml  TorrentSearchInstallDialog.qml  TorrentSearchPluginsDialog.qml  (+4 more)
app/scripts/: torrent_search_runner.py
app/search_plugins/: linuxtracker.py
app/src/: AppController.cpp  AppController.h  AppSettings.cpp  AppSettings.h  AppVersion.h.in  CategoryModel.cpp  CategoryModel.h  DownloadDatabase.cpp  DownloadDatabase.h  DownloadItem.cpp  DownloadItem.h  DownloadQueue.cpp  DownloadQueue.h  DownloadTableModel.cpp  DownloadTableModel.h  FileDragDropHelper.cpp  FileDragDropHelper.h  FileIconImageProvider.cpp  FileIconImageProvider.h  GrabberCrawler.cpp  GrabberCrawler.h  GrabberProjectModel.cpp  GrabberProjectModel.h  GrabberResultModel.cpp  GrabberResultModel.h  NativeMessagingHost.cpp  NativeMessagingHost.h  NetworkInfo.cpp  NetworkInfo.h  Queue.cpp  Queue.h  QueueDatabase.cpp  QueueDatabase.h  QueueModel.cpp  QueueModel.h  RssArticleModel.cpp  RssArticleModel.h  RssFeedModel.cpp  RssFeedModel.h  RssManager.cpp  (+26 more)
app/style-overrides/QtQuick/Controls/Material/: Menu.qml  MenuItem.qml
cmake/: FindLibtorrentRasterbar.cmake  GenerateBuildTime.cmake
extensions/: INTERCEPTION_FLOW.md  chrome.crx  chrome.pem
extensions/chrome/: README.md  content.js  manifest.json  manifest.store.json  page-bridge.js  popup.html  popup.js  service-worker.js
extensions/chrome/shared/: interceptor.js  messaging.js
extensions/firefox/: 533b75163b7b4c2e902d-0.1.2.xpi  content.js  manifest.json  popup.html  popup.js  repack.bat  service-worker.js  stellar-firefox-0.1.3.xpi  stellar-firefox-0.1.4.xpi  stellar-firefox-0.1.5.xpi  stellar-firefox-0.1.6.xpi
extensions/shared/: interceptor.js  messaging.js
packaging/flatpak/: io.github.stellar.Stellar.desktop  io.github.stellar.Stellar.metainfo.xml  io.github.stellar.Stellar.yml
packaging/linux/: com.stellar.downloadmanager.json
packaging/windows/: installer.iss  native-host-manifest-installed.json  native-host-manifest.json
protocol/: native-messaging-schema.json
